2002-01-18  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.h:
	* module/compat22.h: 
	* module/compat24.h: s/VATLEAST/V_AT_LEAST/
 
	* module/oprofile.c: remove dead code
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat.c: don't need to re-take BKL for
	  d_path on 2.2
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat22.h:
	* module/compat24.h:
	* module/op_syscalls.c: we mustn't take the mmap sem
	  under 2.2
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat22.h:
	* module/compat24.h:
	* module/op_syscalls.c: whoops, handy to lock the
	  BKL when it is necessary.
 
	* dae/oprofiled.c: fix warning
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* op_user.h:
	* dae/op_start:
	* gui/oprof_start_config.h:
	* module/oprofile.h: bump note size and watermark,
	  I was getting problems on my dual SMP box in kernel compiles
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/Makefile.in:
	* module/oprofile_nmi.S:
	* module/oprofile_nmi22.S:
	* module/oprofile_nmi24.S: split assembly for 2.2/4 

	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: s/AFTER/ATLEAST/
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/compat24.h: define to have ->owner
 
2002-01-17  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start.h:
	* gui/oprof_start_config.h:
	* gui/oprof_start.cpp: validate the RTC max count

2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* oprofile.c:
	* module/compat24.h: 
	* module/compat22.h: fix compile, nmi wake up check
	 
	* module/op_rtc.c: user/kernel profiling feature
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: clarification
 
	* module/compat22.h:
	* module/compat24.h:
	* module/oprofile.c: ->owner fixes
 
2002-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* module/oprofile.h: clean up
 
	* module/compat.h:
	* module/compat22.h:
	* module/compat24.h: split header files up
	  for readability
 